Models almost done

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ PORT=9000
 MONGO_URI=mongodb+srv://lhmajola:Br3jpetjUTw2qVEE@cluster.ja3qc.mongodb.net/ecommerce?retryWrites=true&w=majority&appName=Cluster
 JWT_SECRET=abc123
 
-//Br3jpetjUTw2qVEE lhmajola
+//Br3jpetjUTw2qVEE lhmajola+
