--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "ecommerce_group",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "backend/server.mjs",
   "scripts": {
-    "server": "nodemon backend/server.mjs",
-    "dev": "node backend/server.mjs"
+    "start": "node backend/server.mjs",
+    "server": "nodemon backend/server.js",
+    "client": "npm run dev --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
@@ -13,13 +15,16 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-async-handler": "^1.2.0",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2"
   },
   "devDependencies": {
+    "concurrently": "^9.1.0",
     "nodemon": "^3.1.7"
   }
 }
